ICODA-109  class name added to dangerouslySetIneerHTL to ensure page footer remains visible

--- a/src/pages/commonComponents/CookiePage.scss
+++ b/src/pages/commonComponents/CookiePage.scss
@@ -16,9 +16,9 @@
 	align-items: center;
 	justify-content: center;
 }
-footer.footer,
-form.search,
-header.header.clear {
+.wpData footer.footer,
+.wpData form.search,
+.wpData header.header.clear {
 	display: none;
 }
 .cookie-page-button {
